improved layout, translations, bugs on safari

--- a/public/src/vue/less/_globals.less
+++ b/public/src/vue/less/_globals.less
@@ -465,8 +465,8 @@ hr {
   margin: @t-skipline 0;
   border:none;
   border-top: 1px solid @c-border;
-  border-image: repeating-linear-gradient(to right, currentColor, currentColor 1ch, transparent 1ch, transparent ~"calc(1ch + 2px)") 1;
-  border-image-repeat: round;
+  // border-image: repeating-linear-gradient(to right, currentColor, currentColor 1ch, transparent 1ch, transparent ~"calc(1ch + 2px)") 1;
+  // border-image-repeat: round;
 }
 
 table {
